@@ -12,6 +12,7 @@ glibc (2.3.6-3) UNRELEASED; urgency=low
     for the main pass. Otherwise alternate libraries would conflict with the
     main one when using multiarch.
   * Fix the build-dependencies for kfreebsd-amd64.
+  * Add sysdeps/kfreebsd-amd64.mk
 
   [ Clint Adams ]
   * Get rid of -o as a binary operator to [ in tzconfig and postinst.
